<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_formulario">Cadastro de Alunos</string>
    <string name="noImage">Imagem Não Disponível</string>
    <string name="formularioName">Nome</string>
    <string name="formularioTelefone">Telefone</string>
    <string name="formularioAddress">Endereço</string>
    <string name="formularioSite">Site</string>
    <string name="formularioNota">Nota</string>
    <string name="formularioGravar">Gravar Informações</string>
    <string name="menu_Novo">Novo</string>
    <string name="menu_Mapa">Mapa</string>
    <string name="menu_Sincronizar">Sincronizar</string>
    <string name="menu_BaixarProvas">Baixar Provas</string>
    <string name="menu_Preferencias">Preferências</string>
    <string name="menu_MaisOpcoes">Mais Opções</string>
	<string name="menu_contexto_ligar">Ligar</string>
	<string name="menu_contexto_enviarSMS">Enviar SMS</string>
	<string name="menu_contexto_acharNoMapa">Achar no Mapa</string>
	<string name="menu_contexto_navegarNoSite">Navegar no Site</string>
	<string name="menu_contexto_deletar">Deletar</string>
	<string name="menu_contexto_enviarEmail">Enviar E-mail</string>
</resources>
