<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/menu_novo"
        android:title="@string/menu_Novo" 
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always" 
        />
    
    <item
        android:id="@+id/menu_mapa"
        android:title="@string/menu_Mapa" 
        android:icon="@drawable/ic_action_map"  
        android:showAsAction="always" 
        />
    
    <item
        android:id="@+id/menu_enviar_alunos"
        android:title="@string/menu_Sincronizar" 
        android:icon="@drawable/ic_action_import_export"
        android:showAsAction="always"
        />    
	
    <item
        android:id="@+id/menu_receber_provas"
        android:title="@string/menu_BaixarProvas" 
        android:icon="@drawable/ic_action_download"
        android:showAsAction="always"
        /> 
        
    <item
        android:id="@+id/menu_preferencias"
        android:title="@string/menu_Preferencias"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        /> 
        
</menu>
