<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="15dp"
	    >
	
		<ImageView
		    android:id="@+id/foto"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginBottom="20dp"
		    android:contentDescription="@string/noImage"
		    android:src="@drawable/ic_no_image" />
		
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/formularioName"
		    />
		
		<EditText 
		    android:id="@+id/nome"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:layout_marginBottom="10dp"
		    />
		
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/formularioTelefone"
		    />
		
		<EditText 
		    android:id="@+id/telefone"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:layout_marginBottom="10dp"
		    />
		
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/formularioAddress"
		    />
		
		<EditText 
		    android:id="@+id/endereco"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:layout_marginBottom="10dp"
		    />
		
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/formularioSite"
		    />
		
		<EditText 
		    android:id="@+id/site"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:layout_marginBottom="10dp"
		    />
		
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/formularioNota"
		    />

		<SeekBar
		    android:id="@+id/nota"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    android:max="10" />
		
		<Button
		    android:id="@+id/botao"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/formularioGravar" />

	</LinearLayout>
</ScrollView>